--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ edition = "2021"
 name = "1-1"
 path = "1/1_polygones_reguliers.rs"
 
+[[bin]]
+name = "1-2"
+path = "1/2_etoiles_regulieres.rs"
+
 [dependencies]
 nannou = "0.19"
 nannou_egui = "0.19.0"
