--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,18 @@ path = "1/1_polygones_reguliers.rs"
 name = "1-2"
 path = "1/2_etoiles_regulieres.rs"
 
+[[bin]]
+name = "1-3"
+path = "1/3_composition_1.rs"
+
+[[bin]]
+name = "1-4"
+path = "1/4_composition_2.rs"
+
+[[bin]]
+name = "1-5"
+path = "1/5_joligones.rs"
+
 [dependencies]
 nannou = "0.19"
 nannou_egui = "0.19.0"
