--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,10 @@ path = "1/4_composition_2.rs"
 name = "1-5"
 path = "1/5_joligones.rs"
 
+[[bin]]
+name = "2-1-1"
+path = "2/1_1_cheval.rs"
+
 [dependencies]
 nannou = "0.19"
 nannou_egui = "0.19.0"
