--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,26 @@ path = "2/1_4_cheval.rs"
 name = "2-1-5"
 path = "2/1_5_cheval.rs"
 
+[[bin]]
+name = "2-1-6"
+path = "2/1_6_cheval.rs"
+
+[[bin]]
+name = "2-1-7"
+path = "2/1_7_cheval.rs"
+
+[[bin]]
+name = "2-1-8"
+path = "2/1_8_cheval.rs"
+
+[[bin]]
+name = "2-1-9"
+path = "2/1_9_cheval.rs"
+
+[[bin]]
+name = "2-1-10"
+path = "2/1_10_cheval.rs"
+
 [dependencies]
 nannou = "0.19"
 nannou_egui = "0.19.0"
