--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,6 +88,42 @@ path = "2/2_3_1_smurf.rs"
 name = "2-2-3-2"
 path = "2/2_3_2_smurf.rs"
 
+[[bin]]
+name = "3-1-1"
+path = "3/1_1_dragons.rs"
+
+[[bin]]
+name = "3-1-2"
+path = "3/1_2_dragons.rs"
+
+[[bin]]
+name = "3-1-3"
+path = "3/1_3_dragons.rs"
+
+[[bin]]
+name = "3-1-4"
+path = "3/1_4_dragons.rs"
+
+[[bin]]
+name = "3-1-5"
+path = "3/1_5_dragons.rs"
+
+[[bin]]
+name = "3-1-6"
+path = "3/1_6_dragons.rs"
+
+[[bin]]
+name = "3-1-7"
+path = "3/1_7_dragons.rs"
+
+[[bin]]
+name = "3-1-8"
+path = "3/1_8_dragons.rs"
+
+[[bin]]
+name = "3-1-9"
+path = "3/1_9_dragons.rs"
+
 [dependencies]
 nannou = "0.19"
 nannou_egui = "0.19.0"
