--- a/Cargo.toml
+++ b/Cargo.toml
@@ -120,6 +120,11 @@ path = "3/1_6_dragons.rs"
 name = "3-1-7"
 path = "3/1_7_dragons.rs"
 
+[[bin]]
+name = "4-1"
+path = "4/etoiles_fractales.rs"
+
 [dependencies]
+evalexpr = "12.0.2"
 nannou = "0.19"
 nannou_egui = "0.19.0"
