--- a/Cargo.toml
+++ b/Cargo.toml
@@ -122,7 +122,43 @@ path = "3/1_7_dragons.rs"
 
 [[bin]]
 name = "4-1"
-path = "4/etoiles_fractales.rs"
+path = "4/1_etoiles_fractales.rs"
+
+[[bin]]
+name = "5-1-1"
+path = "5/1_1_courbes_orbitales.rs"
+
+[[bin]]
+name = "5-1-2"
+path = "5/1_2_courbes_orbitales.rs"
+
+[[bin]]
+name = "5-1-3"
+path = "5/1_3_courbes_orbitales.rs"
+
+[[bin]]
+name = "5-1-4"
+path = "5/1_4_courbes_orbitales.rs"
+
+[[bin]]
+name = "5-1-5"
+path = "5/1_5_courbes_orbitales.rs"
+
+[[bin]]
+name = "5-1-6"
+path = "5/1_6_courbes_orbitales.rs"
+
+[[bin]]
+name = "5-1-7"
+path = "5/1_7_courbes_orbitales.rs"
+
+[[bin]]
+name = "5-1-8"
+path = "5/1_8_courbes_orbitales.rs"
+
+[[bin]]
+name = "5-1-9"
+path = "5/1_9_courbes_orbitales.rs"
 
 [dependencies]
 evalexpr = "12.0.2"
