--- a/Cargo.toml
+++ b/Cargo.toml
@@ -160,6 +160,62 @@ path = "5/1_8_courbes_orbitales.rs"
 name = "5-1-9"
 path = "5/1_9_courbes_orbitales.rs"
 
+[[bin]]
+name = "5-2-1"
+path = "5/2_1_courbes_tournantes.rs"
+
+[[bin]]
+name = "5-2-2"
+path = "5/2_2_courbes_tournantes.rs"
+
+[[bin]]
+name = "5-2-3"
+path = "5/2_3_courbes_tournantes.rs"
+
+[[bin]]
+name = "5-2-4"
+path = "5/2_4_courbes_tournantes.rs"
+
+[[bin]]
+name = "5-2-5"
+path = "5/2_5_courbes_tournantes.rs"
+
+[[bin]]
+name = "5-2-6"
+path = "5/2_6_courbes_tournantes.rs"
+
+[[bin]]
+name = "5-2-7"
+path = "5/2_7_courbes_tournantes.rs"
+
+[[bin]]
+name = "5-2-8"
+path = "5/2_8_courbes_tournantes.rs"
+
+[[bin]]
+name = "5-2-9"
+path = "5/2_9_courbes_tournantes.rs"
+
+[[bin]]
+name = "5-2-10"
+path = "5/2_10_courbes_tournantes.rs"
+
+[[bin]]
+name = "5-3-1"
+path = "5/3_1_courbes_spirales.rs"
+
+[[bin]]
+name = "5-3-2"
+path = "5/3_2_courbes_spirales.rs"
+
+[[bin]]
+name = "5-3-3"
+path = "5/3_3_courbes_spirales.rs"
+
+[[bin]]
+name = "5-3-4"
+path = "5/3_4_courbes_spirales.rs"
+
 [dependencies]
 evalexpr = "12.0.2"
 nannou = "0.19"
