--- a/Cargo.toml
+++ b/Cargo.toml
@@ -216,6 +216,10 @@ path = "5/3_3_courbes_spirales.rs"
 name = "5-3-4"
 path = "5/3_4_courbes_spirales.rs"
 
+[[bin]]
+name = "6-1"
+path = "6/1_biparti_complet.rs"
+
 [dependencies]
 evalexpr = "12.0.2"
 nannou = "0.19"
