--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,36 +93,36 @@ name = "2-2-3-2"
 path = "2/2_3_2_smurf.rs"
 
 [[bin]]
-name = "3-1-1"
-path = "3/1_1_dragons.rs"
+name = "3-1"
+path = "3/1_dragons.rs"
 
 [[bin]]
-name = "3-1-2"
-path = "3/1_2_dragons.rs"
+name = "3-2"
+path = "3/2_dragons.rs"
 
 [[bin]]
-name = "3-1-3"
-path = "3/1_3_dragons.rs"
+name = "3-3"
+path = "3/3_dragons.rs"
 
 [[bin]]
-name = "3-1-4"
-path = "3/1_4_dragons.rs"
+name = "3-4"
+path = "3/4_dragons.rs"
 
 [[bin]]
-name = "3-1-5"
-path = "3/1_5_dragons.rs"
+name = "3-5"
+path = "3/5_dragons.rs"
 
 [[bin]]
-name = "3-1-6"
-path = "3/1_6_dragons.rs"
+name = "3-6"
+path = "3/6_dragons.rs"
 
 [[bin]]
-name = "3-1-7"
-path = "3/1_7_dragons.rs"
+name = "3-7"
+path = "3/7_dragons.rs"
 
 [[bin]]
-name = "4-1"
-path = "4/1_etoiles_fractales.rs"
+name = "4"
+path = "4/etoiles_fractales.rs"
 
 [[bin]]
 name = "5-1-1"
