--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,23 @@ edition = "2021"
 version = "0.1.0"
 
 [workspace.dependencies]
+nannou = { git = "https://github.com/nannou-org/nannou.git", branch = "supiket/bevy-refactor", features = [ "egui", "webgl2" ] }
 dessins-lib = { path = "crates/dessins-lib", version = "0.1.0" }
 ui-controlled-params = { path = "crates/ui-controlled-params", version = "0.1.0" }
 evalexpr = "12.0.2"
-nannou = "0.19"
-nannou_egui = "0.19.0"
 proc-macro2 = "1.0"
 quote = "1.0"
 syn = { version = "2.0", features = [ "full" ] }
+
+[profile.wasm-dev]
+inherits = "dev"
+debug = true
+
+[profile.wasm_release]
+inherits = "release"
+opt-level = 'z'  # Optimize for size
+lto = true       # Enable link-time optimization
+codegen-units = 1
+panic = 'abort'  # Remove panic unwinding to reduce size
+strip = true     # Remove debug symbols
+debug = false
