--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["crates/dessins-lib", "crates/ui-controlled-params"]
+members = ["crates/dessins", "crates/ui-controlled-params"]
 resolver = "2"
 
 [workspace.package]
@@ -10,7 +10,7 @@ version = "0.1.0"
 [workspace.dependencies]
 anyhow = "1.0"
 nannou = { git = "https://github.com/nannou-org/nannou.git", branch = "bevy-refactor", features = [ "egui" ] }
-dessins-lib = { path = "crates/dessins-lib", version = "0.1.0" }
+dessins = { path = "crates/dessins", version = "0.1.0" }
 ui-controlled-params = { path = "crates/ui-controlled-params", version = "0.1.0" }
 evalexpr = "12.0.2"
 proc-macro2 = "1.0"
