--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,10 @@ version = "0.1.0"
 
 [workspace.dependencies]
 anyhow = "1.0"
-nannou = { git = "https://github.com/nannou-org/nannou.git", branch = "bevy-refactor", features = [ "egui" ] }
+bevy = "0.15"
+bevy_egui = "0.32.0"
+bevy_nannou = { git = "https://github.com/tychedelia/nannou.git", branch = "bevy_examples" }
+nannou = { git = "https://github.com/tychedelia/nannou.git", branch = "bevy_examples", features = [ "egui" ] }
 dessins = { path = "crates/dessins", version = "0.1.0" }
 ui-controlled-params = { path = "crates/ui-controlled-params", version = "0.1.0" }
 evalexpr = "12.0.2"
