--- a/crates/dessins/Cargo.toml
+++ b/crates/dessins/Cargo.toml
@@ -12,6 +12,9 @@ name = "dessins"
 path = "src/main.rs"
 
 [dependencies]
+bevy.workspace = true
+bevy_egui.workspace = true
+bevy_nannou.workspace = true
 evalexpr.workspace = true
 nannou.workspace = true
 ui-controlled-params.workspace = true
