--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,8 @@ jobs:
           extra_nix_config: |
             experimental-features = nix-command flakes
 
-      - name: Build WASM with Nix
-        run: nix build .#wasm
+      - name: Build and optimize WASM with Nix
+        run: nix build .#wasm-opt
 
       - name: Prepare GitHub Pages Artifact
         run: |
