--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ version = "0.1.0"
 
 [workspace.dependencies]
 anyhow = "1.0"
-bevy = "0.15"
+bevy = { version = "0.15", default-features = false, features = [ "webgl2" ] }
 bevy_egui = "0.32.0"
 bevy_nannou = { git = "https://github.com/nannou-org/nannou.git", branch = "bevy-refactor" }
 nannou = { git = "https://github.com/nannou-org/nannou.git", branch = "bevy-refactor", features = [ "egui" ] }
