--- a/crates/dessins/Cargo.toml
+++ b/crates/dessins/Cargo.toml
@@ -15,6 +15,6 @@ path = "src/main.rs"
 bevy.workspace = true
 bevy_egui.workspace = true
 bevy_nannou.workspace = true
+bevy_reflect.workspace = true
 evalexpr.workspace = true
 nannou.workspace = true
-ui-controlled-params.workspace = true
