--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["crates/dessins"]
+members = ["crates/dessins", "crates/adjustable_dessin_derive"]
 resolver = "2"
 
 [workspace.package]
@@ -12,7 +12,7 @@ anyhow = "1.0"
 bevy = { version = "0.15", default-features = false, features = [ "webgl2" ] }
 bevy_egui = "0.32.0"
 bevy_nannou = { git = "https://github.com/nannou-org/nannou.git", branch = "bevy-refactor" }
-dessins = { path = "crates/dessins", version = "0.1.0" }
+adjustable_dessin_derive = { path = "crates/adjustable_dessin_derive", version = "0.1.0" }
 evalexpr = { version = "12.0.2", features = [ "serde" ] }
 nannou = { git = "https://github.com/nannou-org/nannou.git", branch = "bevy-refactor", features = [ "egui" ] }
 
