--- a/crates/dessins/Cargo.toml
+++ b/crates/dessins/Cargo.toml
@@ -12,6 +12,7 @@ name = "dessins"
 path = "src/main.rs"
 
 [dependencies]
+adjustable_dessin_derive.workspace = true
 anyhow.workspace = true # TODO: replace with thiserror
 bevy.workspace = true
 bevy_egui.workspace = true
