OSC controlled variables

--- a/crates/dessins/Cargo.toml
+++ b/crates/dessins/Cargo.toml
@@ -19,4 +19,5 @@ bevy_egui.workspace = true
 bevy_nannou.workspace = true
 evalexpr.workspace = true
 nannou.workspace = true
+nannou_osc.workspace = true
 wavegen.workspace = true
