--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ bevy_nannou = { git = "https://github.com/nannou-org/nannou.git", branch = "bevy
 adjustable_dessin_derive = { path = "crates/adjustable_dessin_derive", version = "0.1.0" }
 evalexpr = { version = "12.0.2", features = [ "serde" ] }
 nannou = { git = "https://github.com/nannou-org/nannou.git", branch = "bevy-refactor", features = [ "egui" ] }
+nannou_osc = "0.19.0"
 wavegen = "0.4.1"
 
 [profile.release]
