--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ adjustable_dessin_derive = { path = "crates/adjustable_dessin_derive", version =
 evalexpr = { version = "12.0.2", features = [ "serde" ] }
 nannou = { git = "https://github.com/nannou-org/nannou.git", branch = "bevy-refactor", features = [ "egui" ] }
 nannou_osc = "0.19.0"
+svg = "0.18.0"
+uuid = "1.16.0"
 wavegen = "0.4.1"
 
 [profile.release]
